--- a/index.html
+++ b/index.html
@@ -1,7 +1,2 @@
-<!DOCTYPE html>
-<html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
-</html>
+<h1>Ahoj!</h1>
+<p>Toto je testovací stránka PlojharSim</p>
