--- a/index.html
+++ b/index.html
@@ -1,2 +1,25 @@
-<h1>Ahoj!</h1>
-<p>Toto je testovací stránka PlojharSim</p>
+<!DOCTYPE html>
+<html lang="cs">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Úvodní stránka</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <div class="pozadi">
+        <div class="prekryti">
+            <header>
+                <h1>Vítejte na mé webové stránce!</h1>
+                <p>Objevte něco nového</p>
+                <a href="#about" class="tlacitko1">Více informací</a>
+            </header>
+        </div>
+    </div>
+
+    <section id="o-mne">
+        <h2>O mně</h2>
+        <p>Tato stránka je vytvořena jako ukázka jednoduchého webu s pěkným pozadím.</p>
+    </section>
+</body>
+</html>
