--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
             <a href="#" class="order-button">Objednávka</a>
         </nav>
     </header>
-
     <!-- Úvodní sekce s pozadím -->
     <div class="hero">
         <div class="overlay">
@@ -30,10 +29,13 @@
                 <p>Servis a montáž vyhrazených plynových zařízení</p>
                 <a href="objednavka.html" class="btn">Objednávka služeb</a>
             </header>
+            <a href="#why-choose" class="scroll-down">
+                <img src="arrow-down.png" alt="Scroll down">
+            </a>
         </div>
     </div>
 </body>
-<section class="why-choose">
+<section id="why-choose" class="why-choose">
     <div class="container">
         <h2>Proč si vybrat právě Seply.cz?</h2>
         <div class="reasons">
