--- a/cenik.html
+++ b/cenik.html
@@ -7,8 +7,6 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
-    <!-- Navigační menu -->
     <header>
         <nav>
             <a href="index.html" class="logo">Seply.cz</a>
@@ -17,15 +15,12 @@
                 <li><a href="o-firme.html">O firmě</a></li>
                 <li><a href="kontakt.html">Kontakt</a></li>
             </ul>
-            <a href="#" class="order-button">Objednávka</a>
+            <a href="objednavka.html" class="order-button">Objednávka</a>
         </nav>
     </header>
-
-    <!-- Sekce Ceník -->
 <section class="pricing">
     <div class="container">
         <h2>Ceník služeb</h2>
-        
         <div class="pricing-category">
             <h3>Uvedení do provozu</h3>
             <table class="price-table">
@@ -123,6 +118,5 @@
         </div>
     </div>
 </section>
-
 </body>
 </html>
