--- a/index.html
+++ b/index.html
@@ -7,21 +7,17 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
-    <!-- Navigační menu -->
     <header>
         <nav>
-            <!-- Název webu jako odkaz na domovskou stránku -->
             <a href="index.html" class="logo">Seply.cz</a>
             <ul>
                 <li><a href="cenik.html">Ceník</a></li>
                 <li><a href="o-firme.html">O firmě</a></li>
                 <li><a href="kontakt.html">Kontakt</a></li>
             </ul>
-            <a href="#" class="order-button">Objednávka</a>
+            <a href="objednavka.html" class="order-button">Objednávka</a>
         </nav>
     </header>
-    <!-- Úvodní sekce s pozadím -->
     <div class="hero">
         <div class="overlay">
             <header>
@@ -30,7 +26,7 @@
                 <a href="objednavka.html" class="btn">Objednávka služeb</a>
             </header>
             <a href="#why-choose" class="scroll-down">
-                <img src="arrow-down.png" alt="Scroll down">
+                <img src="images/arrow-down.png" alt="Scroll down">
             </a>
         </div>
     </div>
@@ -59,27 +55,27 @@
         <h2>Na jaké značky se specializuji</h2>
         <div class="brand-list">
             <div class="brand">
-                <img src="logos/brand1-logo.png" alt="Značka 1">
+                <img src="images/brand1-logo.png" alt="Značka 1">
                 <p>Protherm</p>
             </div>
             <div class="brand">
-                <img src="logos/brand2-logo.png" alt="Značka 2">
+                <img src="images/brand2-logo.png" alt="Značka 2">
                 <p>Vaillant</p>
             </div>
             <div class="brand">
-                <img src="logos/brand3-logo.png" alt="Značka 3">
+                <img src="images/brand3-logo.png" alt="Značka 3">
                 <p>Immergas</p>
             </div>
             <div class="brand">
-                <img src="logos/brand4-logo.png" alt="Značka 4">
+                <img src="images/brand4-logo.png" alt="Značka 4">
                 <p>Enbra</p>
             </div>
             <div class="brand">
-                <img src="logos/brand5-logo.png" alt="Značka 5">
+                <img src="images/brand5-logo.png" alt="Značka 5">
                 <p>Baxi</p>
             </div>
             <div class="brand">
-                <img src="logos/brand6-logo.png" alt="Značka 6">
+                <img src="images/brand6-logo.png" alt="Značka 6">
                 <p>Wolf</p>
             </div>
         </div>
