--- a/cenik.html
+++ b/cenik.html
@@ -9,7 +9,10 @@
 <body>
     <header>
         <nav>
-            <a href="index.html" class="logo">Seply.cz</a>
+            <div style="display: flex; align-items: center;">
+                <a href="index.html" class="logo">Seply.cz</a>
+                <div class="menu-toggle" onclick="toggleMenu()">☰</div>
+            </div>
             <ul>
                 <li><a href="cenik.html">Ceník</a></li>
                 <li><a href="o-firme.html">O firmě</a></li>
