--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <a href="index.html" class="logo">Seply.cz</a>
                 <div class="menu-toggle" onclick="toggleMenu()">☰</div>
             </div>
-            <ul>
+            <ul id="nav-list">
                 <li><a href="cenik.html">Ceník</a></li>
                 <li><a href="o-firme.html">O firmě</a></li>
                 <li><a href="kontakt.html">Kontakt</a></li>
