--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <a href="objednavka.html" class="btn">Objednávka služeb</a>
             </header>
             <a href="#why-choose" class="scroll-down">
-                <img src="images/arrow-down.png" alt="Scroll down">
+                <img src="images/arrow-down.png">
             </a>
         </div>
     </div>
