--- a/cenik.html
+++ b/cenik.html
@@ -121,6 +121,9 @@
         </div>
     </div>
 </section>
+<footer>
+    <p>&copy; 2024 Seply.cz | made by Šimon Plojhar</p>
+</footer>
 <script src="script.js"></script>
 </body>
 </html>
