--- a/index.html
+++ b/index.html
@@ -33,56 +33,59 @@
             </a>
         </div>
     </div>
+    <section id="why-choose" class="why-choose">
+        <div class="container">
+            <h2>Proč si vybrat právě Seply.cz?</h2>
+            <div class="reasons">
+                <div class="reason">
+                    <h3>Spolehlivá služba</h3>
+                    <p>Jsem vyškolen a připraven na všechny problémy, což zajišťuje, že vaše zařízení bude co nejdříve opět funkční.</p>
+                </div>
+                <div class="reason">
+                    <h3>Kvalita a cena</h3>
+                    <p>Náš materiál je kvalitní a ceny jsou velmi příznivé, což zajišťuje, že vám kotel dlouho vydrží bez závad.</p>
+                </div>
+                <div class="reason">
+                    <h3>Profesionalita a zkušenosti</h3>
+                    <p>Jsem vyškolen na kotle vysoké škály výrobců a mám dlouholeté zkušenosti s jejich instalací, údržbou a opravami.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="brands">
+        <div class="container">
+            <h2>Na jaké značky se specializuji</h2>
+            <div class="brand-list">
+                <div class="brand">
+                    <img src="images/brand1-logo.png">
+                    <p>Protherm</p>
+                </div>
+                <div class="brand">
+                    <img src="images/brand2-logo.png">
+                    <p>Vaillant</p>
+                </div>
+                <div class="brand">
+                    <img src="images/brand3-logo.png">
+                    <p>Immergas</p>
+                </div>
+                <div class="brand">
+                    <img src="images/brand4-logo.png">
+                    <p>Enbra</p>
+                </div>
+                <div class="brand">
+                    <img src="images/brand5-logo.png">
+                    <p>Baxi</p>
+                </div>
+                <div class="brand">
+                    <img src="images/brand6-logo.png">
+                    <p>Wolf</p>
+                </div>
+            </div>
+        </div>
+    </section>
+<footer>
+    <p>&copy; 2024 Seply.cz | made by Šimon Plojhar</p>
+</footer>
 <script src="script.js"></script>
 </body>
-<section id="why-choose" class="why-choose">
-    <div class="container">
-        <h2>Proč si vybrat právě Seply.cz?</h2>
-        <div class="reasons">
-            <div class="reason">
-                <h3>Spolehlivá služba</h3>
-                <p>Jsem vyškolen a připraven na všechny problémy, což zajišťuje, že vaše zařízení bude co nejdříve opět funkční.</p>
-            </div>
-            <div class="reason">
-                <h3>Kvalita a cena</h3>
-                <p>Náš materiál je kvalitní a ceny jsou velmi příznivé, což zajišťuje, že vám kotel dlouho vydrží bez závad.</p>
-            </div>
-            <div class="reason">
-                <h3>Profesionalita a zkušenosti</h3>
-                <p>Jsem vyškolen na kotle vysoké škály výrobců a mám dlouholeté zkušenosti s jejich instalací, údržbou a opravami.</p>
-            </div>
-        </div>
-    </div>
-</section>
-<section class="brands">
-    <div class="container">
-        <h2>Na jaké značky se specializuji</h2>
-        <div class="brand-list">
-            <div class="brand">
-                <img src="images/brand1-logo.png" alt="Značka 1">
-                <p>Protherm</p>
-            </div>
-            <div class="brand">
-                <img src="images/brand2-logo.png" alt="Značka 2">
-                <p>Vaillant</p>
-            </div>
-            <div class="brand">
-                <img src="images/brand3-logo.png" alt="Značka 3">
-                <p>Immergas</p>
-            </div>
-            <div class="brand">
-                <img src="images/brand4-logo.png" alt="Značka 4">
-                <p>Enbra</p>
-            </div>
-            <div class="brand">
-                <img src="images/brand5-logo.png" alt="Značka 5">
-                <p>Baxi</p>
-            </div>
-            <div class="brand">
-                <img src="images/brand6-logo.png" alt="Značka 6">
-                <p>Wolf</p>
-            </div>
-        </div>
-    </div>
-</section>
 </html>
