--- a/o-firme.html
+++ b/o-firme.html
@@ -59,10 +59,13 @@
                 <h3>Naše nástroje</h3>
                 <p>Pro zajištění kvalitní práce používáme profesionální přístroje Testo,<br>které nám umožňují rychle a přesně diagnostikovat problémy s plynovými zařízeními.</p>
                 <div class="device-image">
-                    <img src="images/testo.png" alt="Přístroj Testo" />
+                    <img src="images/testo.png">
             </div>
         </div>
     </section>
+<footer>
+    <p>&copy; 2024 Seply.cz | made by Šimon Plojhar</p>
+</footer>
 <script src="script.js"></script>
 </body>
 </html>
