--- a/objednavka.html
+++ b/objednavka.html
@@ -55,6 +55,9 @@
         </form>
         <p id="responseMessage"></p>
     </section>
+<footer>
+    <p>&copy; 2024 Seply.cz | made by Šimon Plojhar</p>
+</footer>
 <script src="script.js"></script>
 </body>
 </html>
