--- a/o-firme.html
+++ b/o-firme.html
@@ -50,8 +50,8 @@
                     <li><a href="https://www.protherm.cz" target="_blank">Protherm</a></li>
                     <li><a href="https://www.vaillant.cz" target="_blank">Vaillant</a></li>
                     <li><a href="https://www.immergas.com" target="_blank">Immergas</a></li>
-                    <li><a href="https://www.enbra.cz" target="_blank">Enbra</a></li>
-                    <li><a href="https://www.baxi.cz" target="_blank">Baxi</a></li>
+                    <li><a href="https://www.enbra.cz/lukas-plojhar" target="_blank">Enbra</a></li>
+                    <li><a href="https://www.baxi.cz/pobocka/PLOJHAR/14056" target="_blank">Baxi</a></li>
                     <li><a href="https://www.wolf.eu" target="_blank">Wolf</a></li>
                 </ul>
             </div>
