--- a/objednavka.html
+++ b/objednavka.html
@@ -59,5 +59,6 @@
     <p>&copy; 2024 Seply.cz | made by Šimon Plojhar</p>
 </footer>
 <script src="script.js"></script>
+<script src="registration-form.js"></script>
 </body>
 </html>
